--- a/assets/style.css
+++ b/assets/style.css
@@ -26,7 +26,7 @@
 }
 
 .main-form {
-    margin: 10em;
+    margin: 5em;
     border-style: solid !important;
     border-color:#3c3c3b !important;
     border-radius: 25px !important;
@@ -67,4 +67,11 @@
 
 .form-control {
     border-radius: 0%;
+}
+
+/*to do. make mobile repsonsive. the form does not render when turned to mobile*/
+@media only screen and (max-width: 768px) {
+    .main-form {
+        margin: 1em;
+    }
 }
